MITAB Library - Revision History
================================


CHANGES - Current Version:
--------------------------


Version 1.2.0 - (2002-05-03)
----------------------------

- Made changes in TABRelation to avoid an infinite loop. The m_poCurFeature
  object have been deleted and the function GetFeatureRef() have been replace
  by GetFeature(). This new function return a TABFeature object that must be 
  control by the calling method. (bug 706)

- Made important changes in order to support writing objects in 16 bits 
  coordinate format. New TABMAPObjHdr-derived classes are used to hold 
  object info in memory until block is full. 
  This was required in order to fix a problem when very small regions 
  were written in 32 bits coordinates when 16 bits should have been used
  because MBR < 65536.  In this case MapInfo would attempt to rewrite the
  modified object info in 16 bits format while the coordinates blocks are
  still in 32 bits format... resulting in a corrupted the file.
  Note that at this point only feature types that use separate coordinate
  blocks can be saved in 16 bits format (PLINE, MULTIPLINE and REGION).

- Prevent writing of coordinates outside of the +/-1e9 integer bounds.
  If coordinates outside of that range are written then the values are
  written as +/-1e9 instead and a warning (ERROR 503) is produced when 
  the file is closed.  Coordinates outside of the +/-1e9 bounds limits
  seemed to confuse MapInfo.

- Disabled the warning (ERROR 503) when coordinates outside of the +/-1e9
  integer bounds in SetCoordFilter().

- Modified the conversion of double to integer coordinates to fix an old
  problem where coordinates written by MITAB would be a little bit off 
  sometimes compared with the same values written by MapInfo.

- Modified mitab_capi.cpp to correctly produce "point" style arcs from
  mitab_c_set_arc().  It now sets a point geometry ensuring that the